Update to latest Spring Boot 2.7, don’t offer all tracks as download.